--- a/style.css
+++ b/style.css
@@ -5,8 +5,58 @@
     --dark-blue: hsl(218, 44%, 22%);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: var(--light-gray);
     font-size: 12px;
     font-family: 'Outfit', sans-serif;
+}
+
+main {
+    background: var(--white);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 470px;
+    margin: auto;
+    box-shadow: 5px 0px 15px 3px rgba(158, 158, 158, 0.2);
+    margin-top: 5em;
+}
+
+article {
+    text-align: center;
+}
+
+div {
+    padding: 20px 40px;
+}
+
+img {
+    height: 270px;
+    width: 270px;
+    border-radius: 10px;
+    justify-content: center;
+    margin-top: -2em;
+}
+
+h1 {
+    color: var(--dark-blue);
+    text-align: center;
+    font-size: 19px;
+    margin-bottom: 20px;
+}
+
+p {
+    color: var(--grayish-blue);
+    text-align: center;
+}
+
+footer {
+    text-align: center;
 }
